--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </main>
 
     <footer>
-        <p>Produzido por <a href="https://www.instagram.com/hugogloss/" target="_blank" rel="dofollow">Hugo</a></p>
+        <p>Produzido por <a href="https://github.com/hugocicillini" target="_blank" rel="dofollow">hugocicillini</a></p>
     </footer>
 </body>
 </html>
